# rust-agent

./: Cargo.toml  README.md  project_plan.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
src/: main.rs
