[package]
name = "rust-agent-llm"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true

# Fases futuras podem adicionar: async-stream, futures-core, etc.